--- a/templates/courselist.html
+++ b/templates/courselist.html
@@ -59,12 +59,12 @@
                                 {#   内容列表项   #}
                                 {% for course in all_courses.object_list %}
                                     <div class="box">
-                                        <a href="course-detail.html">
+                                        <a href="{% url 'course:detail' course.id %}">
                                             <img width="280" height="350" class="scrollLoading"
                                                  src="{{ MEDIA_URL }}{{ course.image }}">
                                         </a>
                                         <div class="des">
-                                            <a href="course-detail.html">
+                                            <a href="{% url 'course:detail' course.id %}">
                                                 <h2>{{ course.name }}</h2>
                                             </a>
                                             <span class="fl">时长：<i class="key">{{ course.learn_times }}</i></span>
@@ -72,7 +72,7 @@
                                         </div>
                                         <div class="bottom">
 
-                                            <a href="course-detail.html"><span class="fl">{{ course.course_org.name }}</span></a>
+                                            <a href="{% url 'course:detail' course.id %}"><span class="fl">{{ course.course_org.name }}</span></a>
 
                                             <span class="star fr  notlogin" data-favid="15">{{ course.fav_nums }}</span>
                                         </div>
