--- a/templates/orglist.html
+++ b/templates/orglist.html
@@ -98,9 +98,15 @@
                                             <h1>{{ org.name }}</h1>
                                             <div class="pic fl">
                                                 {#是否认证和金牌#}
-                                                <img src="{% static 'images/authentication.png' %}"/>
+                                                {% if org.is_auth and org.is_gold %}
+                                                    <img src="{% static 'images/authentication.png' %}"/>
+                                                    <img src="{% static 'images/gold.png' %}"/>
+                                                {% elif org.is_auth and not org.is_gold %}
+                                                    <img src="{% static 'images/authentication.png' %}"/>
+                                                {% elif not org.is_auth and org.is_gold %}
+                                                    <img src="{% static 'images/gold.png' %}"/>
+                                                {% endif %}
 
-                                                <img src="{% static 'images/gold.png' %}"/>
 
                                             </div>
                                         </a>
