--- a/templates/coursevideo.html
+++ b/templates/coursevideo.html
@@ -126,21 +126,21 @@
                                 <h4>讲师提示</h4>
                                 <div class="teacher-info">
                                     <a href="/u/315464/courses?sort=publish" target="_blank">
-                                        <img src='../media/teacher/2016/11/aobama_CXWwMef.png' width='80' height='80'/>
+                                        <img src='{{ course.teacher.image.url }}' width='80' height='80'/>
                                     </a>
                                     <span class="tit">
-          <a href="/u/315464/courses?sort=publish" target="_blank">bobby</a>
-        </span>
-                                    <span class="job">xxx</span>
+                                        <a href="/u/315464/courses?sort=publish" target="_blank">{{ course.teacher.name }}</a>
+                                    </span>
+                                    <span class="job">{{ course.teacher.work_position }}</span>
                                 </div>
                                 <div class="course-info-tip">
                                     <dl class="first">
                                         <dt>课程须知</dt>
-                                        <dd class="autowrap">python基础你需要有</dd>
+                                        <dd class="autowrap">{{ course.youneed_know }}</dd>
                                     </dl>
                                     <dl>
                                         <dt>老师告诉你能学到什么？</dt>
-                                        <dd class="autowrap">django的进阶开发</dd>
+                                        <dd class="autowrap">{{ course.teacher_tell }}</dd>
                                     </dl>
                                 </div>
                             </div>
@@ -156,41 +156,16 @@
                                         <!-- img 200 x 112 -->
                                         <ul class="other-list">
 
-                                            <li class="curr">
-                                                <a href="course-detail.html" target="_blank">
-                                                    <img src="../media/courses/2016/11/540e57300001d6d906000338-240-135_n0L8vbw.jpg"
-                                                         alt="django与vuejs实战项目2">
-                                                    <span class="name autowrap">django与vuejs实战项目2</span>
+                                            {% for course_comm in course_list %}
+                                                <li class="curr">
+                                                <a href="{% url 'course:detail' course_comm.id %}" target="_blank">
+                                                    <img src="{{ course_comm.image.url }}"
+                                                         alt="{{ course_comm.name }}">
+                                                    <span class="name autowrap">{{ course_comm.name }}</span>
                                                 </a>
                                             </li>
+                                            {% endfor %}
 
-                                            <li class="curr">
-                                                <a href="course-detail.html" target="_blank">
-                                                    <img src="../media/courses/2016/12/python面向对象.jpg" alt="python面向对象">
-                                                    <span class="name autowrap">python面向对象</span>
-                                                </a>
-                                            </li>
-
-                                            <li class="curr">
-                                                <a href="course-detail.html" target="_blank">
-                                                    <img src="../media/courses/2016/12/python文件处理.jpg" alt="python文件处理">
-                                                    <span class="name autowrap">python文件处理</span>
-                                                </a>
-                                            </li>
-
-                                            <li class="curr">
-                                                <a href="course-detail.html" target="_blank">
-                                                    <img src="../media/courses/2016/11/mysql.jpg" alt="django入门">
-                                                    <span class="name autowrap">django入门</span>
-                                                </a>
-                                            </li>
-
-                                            <li class="curr">
-                                                <a href="course-detail.html" target="_blank">
-                                                    <img src="../media/courses/2016/12/mysql.jpg" alt="xadmin进阶开发">
-                                                    <span class="name autowrap">xadmin进阶开发</span>
-                                                </a>
-                                            </li>
 
                                         </ul>
                                     </div>
