--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
                 <h1>公开课程</h1>
                 <div class="module1 eachmod">
                     <div class="module1_1 left">
-                        <img width="228" height="614" src="/static/images/module1_1.jpg"/>
+                        <img width="228" height="614" src="/static/images/module3_1.jpg"/>
                         <p class="fisrt_word">名师授课<br/>专业权威</p>
                         <a class="more" href="{% url 'course:list' %}">查看更多课程 ></a>
                     </div>
@@ -117,13 +117,14 @@
                     <div class="module3_1 left">
                         <img width="228" height="463" src="/static/images/module3_1.jpg"/>
                         <p class="fisrt_word">名校来袭<br/>权威认证</p>
-                        <a class="more" href="org-list.html">查看更多机构 ></a>
+                        <a class="more" href="{% url 'org:list' %}">查看更多机构 ></a>
                     </div>
                     <div class="right">
                         <ul>
                             {% for org in course_orgs %}
                             <li class="{% if forloop.counter0 == 4 %}five{% endif %}">
                                 <a href="#">
+{#                                    {% url 'org:detail' org.id %}#}
                                     <div class="company">
                                         <img width="184" height="100" src="{{ org.image.url }}"/>
                                         <div class="score">
