--- a/templates/base.html
+++ b/templates/base.html
@@ -95,11 +95,11 @@
                                 </a>
                             </li>
 
-                            <li>
-                                <a href="teachers-list.html">授课教师</a>
+                            <li class="{% if request.path|slice:'13' == '/org/teachers' %}active{% endif %}">
+                                <a href="{% url 'org:teachers' %}">授课教师</a>
                             </li>
 
-                            <li class="{% if request.path|slice:'4' == '/org' %}active{% endif %}"><a href="{% url 'org:list' %}">授课机构</a></li>
+                            <li class="{% if request.path|slice:'9' == '/org/list' %}active{% endif %}"><a href="{% url 'org:list' %}">授课机构</a></li>
                         </ul>
                     </div>
                 </div>
