--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,11 @@
         <div class=" header">
             <div class="top">
                 <div class="wp">
-                    <div class="fl"><p>服务电话：<b>400-888-888</b></p></div>
+                    <div class="fl">
+                        <p>
+                            服务电话：<b>400-888-888</b>
+                        </p>
+                    </div>
 
                     {% if user.is_authenticated %}
                         <div class="personal">
@@ -49,13 +53,12 @@
                                 </dl>
                                 <div class="btn">
                                     <a class="personcenter fl" href="{% url 'users:info' %}">进入个人中心</a>
-                                    <a class="fr" href="{% url 'logout'%}">退出</a>
+                                    <a class="fr" href="{% url 'logout' %}">退出</a>
                                 </div>
                             </div>
                         </div>
-
-                        </div>
-                        </div>
+                    </div>
+                </div>
                     {% else %}
                         <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
@@ -87,7 +90,8 @@
                 <div class="nav">
                     <div class="wp">
                         <ul>
-                            <li class="{% if request.path == '/' %}active{% endif %} "><a href="{% url 'index' %}">首页</a></li>
+                            <li class="{% if request.path == '/' %}active{% endif %} "><a
+                                    href="{% url 'index' %}">首页</a></li>
 
                             <li class="{% if request.path|slice:'7' == '/course' %}active{% endif %} ">
                                 <a href="{% url 'course:list' %}">
@@ -99,14 +103,12 @@
                                 <a href="{% url 'org:teachers' %}">授课教师</a>
                             </li>
 
-                            <li class="{% if request.path|slice:'9' == '/org/list' %}active{% endif %}"><a href="{% url 'org:list' %}">授课机构</a></li>
+                            <li class="{% if request.path|slice:'9' == '/org/list' %}active{% endif %}"><a
+                                    href="{% url 'org:list' %}">授课机构</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
-
-        </div>
-        </div>
         </div>
 
     </header>
