--- a/templates/usercenter-base.html
+++ b/templates/usercenter-base.html
@@ -28,37 +28,42 @@
         <div class="header2 header">
             <div class="top">
                 <div class="wp">
-                    <div class="fl"><p>服务电话：<b>33333333</b></p></div>
-                    <!--登录后跳转-->
+                    <div class="fl">
+                        <p>
+                            服务电话：<b>400-888-888</b>
+                        </p>
+                    </div>
 
-
-                    <div class="personal">
-                        <dl class="user fr">
-                            <dd>bobby<img class="down fr" src="/static/images/top_down.png"/></dd>
-                            <dt><img width="20" height="20" src="/static/media/image/2016/12/default_big_14.png"/></dt>
-                        </dl>
-                        <div class="userdetail">
-                            <dl>
-                                <dt><img width="80" height="80" src="/static/media/image/2016/12/default_big_14.png"/>
+                    {% if user.is_authenticated %}
+                        <div class="personal">
+                            <dl class="user fr">
+                                <dd>{{ user.nick_name }}<img class="down fr" src="/static/images/top_down.png"/></dd>
+                                <dt><img width="20" height="20" src="{{ user.image.url }}"/>
                                 </dt>
-                                <dd>
-                                    <h2>django</h2>
-                                    <p>bobby</p>
-                                </dd>
                             </dl>
-                            <div class="btn">
-                                <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>
-                                <a class="fr" href="/logout/">退出</a>
+                            <div class="userdetail">
+                                <dl>
+                                    <dt><img width="80" height="80"
+                                             src="{{ user.image.url }}"/>
+                                    </dt>
+                                    <dd>
+                                        <h2></h2>
+                                        <p>{{ user.username }}</p>
+                                    </dd>
+                                </dl>
+                                <div class="btn">
+                                    <a class="personcenter fl" href="{% url 'users:info' %}">进入个人中心</a>
+                                    <a class="fr" href="{% url 'logout' %}">退出</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <a href="usercenter-message.html">
-                        <div class="msg-num"><span id="MsgNum">0</span></div>
-                    </a>
-
-
                 </div>
-            </div>
+                    {% else %}
+                        <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
+                        <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
+
+                    {% endif %}
 
             <div class="middle">
                 <div class="wp">
@@ -80,14 +85,10 @@
     <div class="wp list personal_list">
         <div class="left">
             <ul>
-                <li class="active2"><a href="usercenter-info.html">个人资料</a></li>
-                <li><a href="usercenter-mycourse.html">我的课程</a></li>
-                <li><a href="usercenter-fav-course.html">我的收藏</a></li>
-                <li>
-                    <a href="usercenter-message.html" style="position: relative;">
-                        我的消息
-                    </a>
-                </li>
+                <li class="{% ifequal current_page 'info'  %}active{% endifequal %}"><a href="{% url 'users:info' %}">个人资料</a></li>
+                <li class="{% ifequal current_page 'mycourse'  %}active{% endifequal %}"><a href="{% url 'users:mycourse' %}">我的课程</a></li>
+                <li class="{% ifequal current_page 'myfav'  %}active{% endifequal %}"><a href="usercenter-fav-course.html">我的收藏</a></li>
+                <li class="{% ifequal current_page 'message'  %}active{% endifequal %}"><a href="usercenter-message.html" style="position: relative;">我的消息</a></li>
             </ul>
         </div>
 
