--- a/templates/usercenter-info.html
+++ b/templates/usercenter-info.html
@@ -8,8 +8,8 @@
     <section>
         <div class="wp">
             <ul class="crumbs">
-                <li><a href="index.html">首页</a>></li>
-                <li><a href="/user/home/">个人中心</a>></li>
+                <li><a href="{% url 'index' %}">首页</a>></li>
+                <li><a href="{% url 'users:info' %}">个人中心</a>></li>
                 <li>个人信息</li>
             </ul>
         </div>
