--- a/templates/usercenter-info.html
+++ b/templates/usercenter-info.html
@@ -39,33 +39,38 @@
                         </label>
                     </form>
                     <div style="border-top:1px solid #eaeaea;margin-top:30px;">
-                        <a class="button btn-green btn-w100" id="jsUserResetPwd"
-                           style="margin:80px auto;width:100px;">修改密码</a>
+                        <a class="button btn-green btn-w100" id="jsUserResetPwd" style="margin:80px auto;width:100px;">修改密码</a>
                     </div>
                 </div>
                 <form class="perinform" id="jsEditUserForm" autocomplete="off">
                     <ul class="right">
                         <li>昵&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称：
-                            <input type="text" name="nick_name" id="nick_name" value="{{ user.nick_name|default_if_none:'' }}"
+                            <input type="text" name="nick_name" id="nick_name"
+                                   value="{{ user.nick_name|default_if_none:'' }}"
                                    maxlength="10">
                             <i class="error-tips"></i>
                         </li>
                         <li>生&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日：
-                            <input type="text" id="birth_day" name="birday" value="{{ user.birthday|default_if_none:''|date:'Y-m-d' }}"
+                            <input type="text" id="birth_day" name="birday"
+                                   value="{{ user.birthday|default_if_none:''|date:'Y-m-d' }}"
                                    readonly="readonly"/>
                             <i class="error-tips"></i>
                         </li>
                         <li>性&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别：
-                            <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" name="gender" value="male" checked="{% ifequal user_gender_display '男'  %}checked{% endifequal %}">男</label>
-                            <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" name="gender" value="female" checked="{% ifequal user_gender_display '女'  %}checked{% endifequal %}">女</label>
+                            <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" name="gender" value="male"
+                                                                        checked="{% ifequal user_gender_display '男' %}checked{% endifequal %}">男</label>
+                            <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" name="gender" value="female"
+                                                                              checked="{% ifequal user_gender_display '女' %}checked{% endifequal %}">女</label>
                         </li>
                         <li class="p_infor_city">地&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;址：
-                            <input type="text" name="address" id="address" placeholder="请输入你的地址" value="{{ user.address }}"
+                            <input type="text" name="address" id="address" placeholder="请输入你的地址"
+                                   value="{{ user.address }}"
                                    maxlength="10">
                             <i class="error-tips"></i>
                         </li>
                         <li>手&nbsp;&nbsp;机&nbsp;&nbsp;号：
-                            <input class="borderno" type="text" name="mobile" readonly="readonly" value="{{ user.mobile }}">
+                            <input class="borderno" type="text" name="mobile" readonly="readonly"
+                                   value="{{ user.mobile }}">
                             <span class="changeemai_btn green changephone-color">[修改]</span>
                         </li>
                         <li class="button heibtn">
@@ -78,6 +83,141 @@
     </div>
 {% endblock %}
 
+{% block custom_js %}
+    <script>
+        $(function () {
+            //个人资料修改密码
+            $('#jsUserResetPwd').on('click', function () {
+                Dml.fun.showDialog('#jsResetDialog', '#jsResetPwdTips');
+            });
+            $('#jsResetPwdBtn').click(function () {
+                $.ajax({
+                    cache: false,
+                    type: "POST",
+                    dataType: 'json',
+                    url: '{% url 'users:update_pwd' %}',
+                    data: $('#jsResetPwdForm').serialize(),
+                    async: true,
+                    success: function (data) {
+                        if (data.password1) {
+                            Dml.fun.showValidateError($("#pwd"), data.password1);
+                        } else if (data.password2) {
+                            Dml.fun.showValidateError($("#repwd"), data.password2);
+                        } else if (data.__all__) {
+                            Dml.fun.showValidateError($("#repwd"), data.__all__);
+                        } else if (data.status == "success") {
+                            Dml.fun.showTipsDialog({
+                                title: '提交成功',
+                                h2: '修改密码成功，请重新登录!',
+                            });
+                            Dml.fun.winReload();
+                        } else if (data.msg) {
+                            Dml.fun.showValidateError($("#pwd"), data.msg);
+                            Dml.fun.showValidateError($("#repwd"), data.msg);
+                        }
+                    }
+                });
+            });
+
+            //个人资料头像
+            $('.js-img-up').uploadPreview({
+                Img: ".js-img-show", Width: 94, Height: 94, Callback: function () {
+                    $('#jsAvatarForm').submit();
+                }
+            });
+
+            $('#jsChangeEmailCodeBtn').on('click', function () {
+                sendCodeChangeEmail($(this));
+            });
+            $('#jsChangeEmailBtn').on('click', function () {
+                changeEmailSubmit($(this));
+            });
+            $('#jsChangePhoneBtn').on('click', function () {
+                changePhoneSubmit($(this));
+            });
+            $('#jsChangePhoneCodeBtn').on('click', function () {
+                sendCodeChangePhone($(this));
+            });
+            $('.changeemai_btn').on('click', function () {
+                Dml.fun.showDialog('#jsChangePhoneDialog', '#jsChangePhoneTips', 'jsChangeEmailTips');
+            });
+
+            //input获得焦点样式
+            $('.perinform input[type=text]').focus(function () {
+                $(this).parent('li').addClass('focus');
+            });
+            $('.perinform input[type=text]').blur(function () {
+                $(this).parent('li').removeClass('focus');
+            });
+
+            laydate({
+                elem: '#birth_day',
+                format: 'YYYY-MM-DD',
+                max: laydate.now()
+            });
+
+            verify(
+                [
+                    {id: '#nick_name', tips: Dml.Msg.epNickName, require: true}
+                ]
+            );
+            //保存个人资料
+            $('#jsEditUserBtn').on('click', function () {
+                var _self = $(this),
+                    $jsEditUserForm = $('#jsEditUserForm')
+                verify = verifySubmit(
+                    [
+                        {id: '#nick_name', tips: Dml.Msg.epNickName, require: true},
+                        {id: '#birth_day', tips: Dml.Msg.epBirthday, require: true}
+                    ]
+                );
+                if (!verify) {
+                    return;
+                }
+                $.ajax({
+                    cache: false,
+                    type: 'post',
+                    dataType: 'json',
+                    url: "/users/info/",
+                    data: $jsEditUserForm.serialize(),
+                    async: true,
+                    beforeSend: function (XMLHttpRequest) {
+                        _self.val("保存中...");
+                        _self.attr('disabled', true);
+                    },
+                    success: function (data) {
+                        if (data.nick_name) {
+                            _showValidateError($('#nick_name'), data.nick_name);
+                        } else if (data.birthday) {
+                            _showValidateError($('#birth_day'), data.birthday);
+                        } else if (data.address) {
+                            _showValidateError($('#address'), data.address);
+                        } else if (data.status == "fail") {
+                            Dml.fun.showTipsDialog({
+                                title: '保存失败',
+                                h2: data.msg
+                            });
+                        } else if (data.status == "success") {
+                            Dml.fun.showTipsDialog({
+                                title: '保存成功',
+                                h2: '个人信息修改成功！'
+                            });
+                            setTimeout(function () {
+                                window.location.href = window.location.href;
+                            }, 1500);
+                        }
+                    },
+                    complete: function (XMLHttpRequest) {
+                        _self.val("保存");
+                        _self.removeAttr("disabled");
+                    }
+                });
+            });
+
+
+        });
+    </script>
+{% endblock %}
 
 
 
